# fuel-tracker

./: .codexignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CI_SETUP.md  CONTRIBUTING.md  MODEL_CARD.md  Makefile  README.md  SECURITY_HARDENING.md  check_ci_artifacts.py  pyproject.toml  requirements.txt  run.ps1  setup-dev.ps1  setup-dev.sh  verify_setup.sh
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  doc_update.md  release_checklist.md
.github/workflows/: ci.yml  docs-check.yml
config/: eia_endpoints.yml
docs/: CHANGELOG.md  architecture.md  qptm_agv_validation.md
docs/assets/diagrams/: qptm_agv_lineage.mmd
docs/vision/: FIRE-ecosystem-brief.md
fueltracker/: __init__.py  __main__.py  backtest.py  cache.py  cli.py  config.py  contracts.py  eia_client.py  forecast.py  io_parquet.py  lineage.py  logging_utils.py  panel.py  provisional.py  run_backtest.py  validate.py
fueltracker/models/: __init__.py  baseline.py  sarimax.py  stl_ets.py
fueltracker/pipeline/: __init__.py  fetch_and_build.py
scripts/: check_ascii.py  utf8_guard.py
tests/: __init__.py  test_contracts_lineage.py  test_eia_client_smoke.py
