[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fueltracker"
version = "0.1.0"
description = "A Python package for tracking fuel prices and consumption"
authors = [
    {name = "Fuel Tracker Team", email = "team@fueltracker.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.32",
    "tenacity>=8.3",
    "pydantic>=2.7",
    "pyarrow>=16.0",
    "statsmodels>=0.14",
    "holidays>=0.56",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
    "detect-secrets>=1.5.0",
]

[project.scripts]
fueltracker = "fueltracker.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/fuel-tracker"
Repository = "https://github.com/yourusername/fuel-tracker"
Issues = "https://github.com/yourusername/fuel-tracker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fueltracker*"]

[tool.setuptools.package-data]
fueltracker = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
